--- a/menu/index.html
+++ b/menu/index.html
@@ -118,14 +118,14 @@
                             </li>
                             <li>
                                 <h3>Fagottini di Verza<span class="right">4,5</span></h3>    
-                                <p>con ripieno di zucca</p>
+                                <p>con ripieno di patate</p>
                             </li>
                             <li>
                                 <h3>Nachos Supreme<span class="right">4,5</span></h3>    
                                 <p>tortilla con peperoncini e cheddar</p>
                             </li>
                             <li>
-                                <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>    
+                                <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>
                                 <p>brasati alla birra</p>
                             </li>
                             <li>
@@ -359,36 +359,36 @@
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Castelli Repetita Iuvant<span class="right"> 4 | 6</span></h3>
-                                <p>season 6,5%</p>
+                                <h3>Borgo Enkir<span class="right"> 4 | 6</span></h3>
+                                <p>season 6,1%</p>
+                            </li>
+                            <li>
+                                <h3>Borgo 2512<span class="right"> 4 | 6</span></h3>
+                                <p>belgian ale ambrata 9,5%</p>
                             </li>
                             <li>
                                 <h3>Castelli Palmares<span class="right"> 4 | 6</span></h3>
                                 <p>ale rossa 6,5%</p>
                             </li>
                             <li>
+                                <h3>Emiliano Tropicale<span class="right"> 4 | 6</span></h3>
+                                <p>light IPA 4,7%</p>
+                            </li>
+                            <li>
                                 <h3>MC77 Sofronia<span class="right"> 4 | 6</span></h3>
                                 <p>blanche con ibisco 5%</p>
                             </li>
                             <li>
-                                <h3>MC77 Punto<span class="right"> 4 | 6</span></a></h3>
-                                <p>session IPA 3,9%</p>
+                                <h3>Mukkeller Corva Nera<span class="right"> 4 | 6</span></h3>
+                                <p>stout 5,7%</p>
                             </li>
                             <li>
-                                <h3>MC77 Breaking Hops<span class="right"> 4 | 6</span></h3>
-                                <p>doppia IPA 7,2%</p>
+                                <h3>Mukkeller Marina<span class="right"> 4 | 6</span></h3>
+                                <p>pale ale 6,7%</p>
                             </li>
                             <li>
-                                <h3>Monkey Pale Ale<span class="right"> 4 | 6</span></a></h3>
-                                <p>belgian pale ale 6%</p>
-                            </li>
-                            <li>
-                                <h3>Mukkeller PSE<span class="right"> 4 | 6</span></h3>
-                                <p>golden ale 5,6%</p>
-                            </li>
-                            <li>
-                                <h3>Emiliano Snoopy<span class="right"> 4 | 6</span></h3>
-                                <p>pils/blanche 4,1%</p>
+                                <h3>Mukkeller Hattori Hanzo<span class="right"> 4 | 6</span></h3>
+                                <p>imperial IPA 8,3%</p>
                             </li>
                         </ul>
                     </div>
@@ -425,10 +425,6 @@
                                 <p>4,2% 33cl</p>
                             </li>
                             <li>
-                                <h3>Nebraska IPA<span class="right">6</span></h3>
-                                <p>6,9% 37,5cl</p>
-                            </li>
-                            <li>
                                 <h3>The Hop Concept<span class="right">16</span></h3>
                                 <p>8,5% 66cl</p>
                             </li>
@@ -442,10 +438,6 @@
                             <li>
                                 <h3>Birrificio del Borgo Maledetta<span class="right">5</span></h3>
                                 <p>6,2% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Castelli Italicum<span class="right">5</span></h3>
-                                <p>5% 33cl</p>
                             </li>
                             <li>
                                 <h3>EvilTwin Citra Sunshine<span class="right">7,5</span></h3>
@@ -471,10 +463,6 @@
                         <h2 class="subheader"><small>pale ale</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>EvilTwin Hipster Ale<span class="right">6</span></h3>
-                                <p>5,5% 37,5cl</p>
-                            </li>
-                            <li>
                                 <h3>Napar Pale Ale<span class="right">5,5</span></h3>
                                 <p>5,1% 33cl</p>
                             </li>
@@ -482,12 +470,8 @@
                         <h2 class="subheader"><small>PILS</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Brewfist Imperial Pils<span class="right">5</span></h3>
-                                <p>6,7% 37,5cl</p>
-                            </li>
-                            <li>
-                                <h3>Elchbrau Pils<span class="right">4,5</span></h3>
-                                <p>4,9% 50cl</p>
+                                <h3>Mukkeller Pils<span class="right">6</span></h3>
+                                <p>5,2% 50cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>barley wine</small></h2>
