--- a/menu/index.html
+++ b/menu/index.html
@@ -440,6 +440,10 @@
                                 <p>6,2% 33cl</p>
                             </li>
                             <li>
+                                <h3>Birrificio del Borgo Catagnale<span class="right">15</span></h3>
+                                <p>7,5% 75cl</p>
+                            </li>
+                            <li>
                                 <h3>EvilTwin Citra Sunshine<span class="right">7,5</span></h3>
                                 <p>4,5% 50cl</p>
                             </li>
