--- a/menu/index.html
+++ b/menu/index.html
@@ -456,6 +456,10 @@
                                 <p>5,5% 33cl</p>
                             </li>
                             <li>
+                                <h3>Mukkeller Zero Tituli<span class="right">5</span></h3>
+                                <p>4,5% 33cl</p>
+                            </li>
+                            <li>
                                 <h3>Nomada Estepa Red Hoppy<span class="right">5</span></h3>
                                 <p>5,5% 33cl</p>
                             </li>
@@ -549,10 +553,6 @@
                             <li>
                                 <h3>The Willows Family Ales<span class="right">22</span></h3>
                                 <p>7% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Wild Beer Indigo Child<span class="right">8,5</span></h3>
-                                <p>8% 33cl</p>
                             </li>
                         </ul>
                     </div>
