--- a/menu/index.html
+++ b/menu/index.html
@@ -77,7 +77,7 @@
                     <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cena</a>
                 </li>
                 <li class="tab-title" role="presentational">
-                    <a href="#domenica" role="tab" tabindex="3" aria-selected="false" controls="domenica">Domenica</a>
+                    <a href="#pranzo" role="tab" tabindex="3" aria-selected="false" controls="pranzo">Pranzo</a>
                 </li>
                 <li class="tab-title" role="presentational">
                     <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
@@ -96,7 +96,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Dal Mercoledì alla Domenica. Dalle 19:00 alle 23:00
+                        <h4>Dal Mercoledì alla pranzo. Dalle 19:00 alle 23:00
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
@@ -274,8 +274,8 @@
             </div>
         </section>
 <!-- cena fine -->
-<!-- domenica inizio-->
-        <section class="content" role="tabpanel" aria-hidden="true" id="domenica">
+<!-- pranzo inizio-->
+        <section class="content" role="tabpanel" aria-hidden="true" id="pranzo">
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
@@ -350,7 +350,7 @@
                 </div>
             </div>
         </section>
-<!-- Brunch fine -->
+<!-- pranzo fine -->
 <!-- birra -->
         <section class="content" role="tabpanel" aria-hidden="false" id="birra">
             <div class="panel-menu-2n">
@@ -735,7 +735,7 @@
                 </div>
                 <div class="row">    
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Domenica</p>
+                        <p>pranzo</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>12&ensp;&ndash;&ensp;14<br>19&ensp;&ndash;&ensp;23</p>
