--- a/contatti/index.html
+++ b/contatti/index.html
@@ -93,7 +93,7 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h2>Press Kit</h2>
             </div>
         </div>
@@ -159,7 +159,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+            <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
                 <ul id="team-tab" class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home">
                     <li>
                         <a href="http://www.beerstrot.it/contatti/team/giulia-mazza.html">
@@ -190,7 +190,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
                 <p><strong>Amiamo la birra artigianale e il buon cibo</strong></p>
                 <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan.</p> 
                 <p>Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
@@ -199,7 +199,7 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h2>Dove Siamo e Cosa Facciamo</h2>
             </div>
         </div>
