--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+            <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
                 <a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/hamburger.jpg" alt="Hamburger" class="extra-space-image-tab-home"></a>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
@@ -106,7 +106,7 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h1>Take Away</h1>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <a role="button" href="http://www.beerstrot.it/eventi/"><img src="http://www.beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
             </div>
-            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
                 <ul class="no-margin-list-bullet">
                     <li>Abbinamenti di cibi e birre</li>
@@ -146,7 +146,7 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h1>Lato Social</h1>
             </div>
         </div>
@@ -168,7 +168,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+            <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
                 <div class="flex-video widescreen vimeo extra-space-video">
                     <a role="button" href="http://www.beerstrot.it/video/">
                         <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -185,7 +185,7 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h1>Blog</h1>
             </div>
         </div>
