--- a/contatti/index.html
+++ b/contatti/index.html
@@ -200,7 +200,7 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-                <h2>Dove Siamo e Cosa Facciamo</h2>
+                <h2>Dove e Cosa Siamo</h2>
             </div>
         </div>
         <div class="row">
