--- a/menu/index.html
+++ b/menu/index.html
@@ -289,7 +289,7 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">Primo<br></h2>
+                        <h2 class="subheader">Primi<br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Lasagne<span class="right">4,5</span></h3>
