--- a/menu/index.html
+++ b/menu/index.html
@@ -338,20 +338,24 @@
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Borgo Enkir<span class="right"> 4 | 6</span></h3>
-                                <p>season 6,1%</p>
+                                <h3>Borgo Reale<span class="right"> 4 | 6</span></h3>
+                                <p>season 6,4%</p>
                             </li>
                             <li>
                                 <h3>Borgo 2512<span class="right"> 4 | 6</span></h3>
                                 <p>belgian ale ambrata 9,5%</p>
                             </li>
                             <li>
-                                <h3>Castelli Palmares<span class="right"> 4 | 6</span></h3>
-                                <p>ale rossa 6,5%</p>
+                                <h3>Emiliano Pomposa Noel<span class="right"> 4 | 6</span></h3>
+                                <p>rossa 7,5%</p>
                             </li>
                             <li>
-                                <h3>Emiliano Tropicale<span class="right"> 4 | 6</span></h3>
-                                <p>light IPA 4,7%</p>
+                                <h3>MC77 Ape Regina<span class="right"> 4 | 6</span></h3>
+                                <p>belgian ale al miele 6,9%</p>
+                            </li>
+                            <li>
+                                <h3>MC77 Rockstone<span class="right"> 4 | 6</span></h3>
+                                <p>imperial IPA affumicata 8,2%</p>
                             </li>
                             <li>
                                 <h3>MC77 Sofronia<span class="right"> 4 | 6</span></h3>
@@ -362,12 +366,8 @@
                                 <p>stout 5,7%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Marina<span class="right"> 4 | 6</span></h3>
-                                <p>pale ale 6,7%</p>
-                            </li>
-                            <li>
-                                <h3>Mukkeller Hattori Hanzo<span class="right"> 4 | 6</span></h3>
-                                <p>imperial IPA 8,3%</p>
+                                <h3>Mukkeller Mugnetti<span class="right"> 4 | 6</span></h3>
+                                <p>ale 6%</p>
                             </li>
                         </ul>
                     </div>
@@ -419,7 +419,7 @@
                                 <p>6,2% 33cl</p>
                             </li>
                             <li>
-                                <h3>Birrificio del Borgo Catagnale<span class="right">15</span></h3>
+                                <h3>Birrificio del Borgo Castagnale<span class="right">15</span></h3>
                                 <p>7,5% 75cl</p>
                             </li>
                             <li>
@@ -453,6 +453,10 @@
                                 <h3>Napar Pale Ale<span class="right">5,5</span></h3>
                                 <p>5,1% 33cl</p>
                             </li>
+                            <li>
+                                <h3>Castelli Brevis Furor<span class="right">5</span></h3>
+                                <p>6,3% 33cl</p>
+                            </li>
                         </ul>
                         <h2 class="subheader"><small>PILS</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
@@ -473,6 +477,10 @@
                             <li>
                                 <h3>Birrificio del Borgo Keto<span class="right">5</span></h3>
                                 <p>5,2% 33cl</p>
+                            </li>
+                            <li>
+                                <h3>Castelli Calix Niger<span class="right">12</span></h3>
+                                <p>7,2% 75cl</p>
                             </li>
                             <li>
                                 <h3>Westbrook Boo Bear’s<span class="right">13,5</span></h3>
