--- a/take-away/index.html
+++ b/take-away/index.html
@@ -115,7 +115,7 @@
                         </li>
                         <li>
                             <h3>Fagottini di Verza<span class="right">4,5</span></h3>    
-                            <p>con ripieno di zucca</p>
+                            <p>con ripieno di patate</p>
                         </li>
                         <li>
                             <h3>Nachos Supreme<span class="right">4,5</span></h3>    
@@ -151,8 +151,8 @@
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>Autunno<span class="right">8,8</span></h3> 
-                            <p>180 grammi di manzo, fontina, funghi di stagione</p>
+                            <h3>Inverno<span class="right">8,8</span></h3> 
+                            <p>180 grammi di manzo, taleggio, pancetta, insalata</p>
                         </li>
                         <li>
                             <h3>Lamb<span class="right">8,8</span></h3>    
