--- a/menu/index.html
+++ b/menu/index.html
@@ -96,7 +96,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Dal Mercoledì alla pranzo. Dalle 19:00 alle 23:00
+                        <h4>Dal Mercoledì alla Domenica. Dalle 19:00 alle 23:00
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
