--- a/menu/index.html
+++ b/menu/index.html
@@ -288,12 +288,44 @@
             </div>
             <div class="panel-menu-2n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">Primi<br></h2>
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Lasagne<span class="right">4,5</span></h3>
-                                <p>bianche con ragù di carne</p>
+                                <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
+                                <p>peperoncini piccanti avvolti nella pancetta</p>
+                            </li>
+                            <li>
+                                <h3>Bocconcini di Pollo<span class="right">4,5</span></h3>    
+                                <p>petto di pollo di prima scelta impanato e fritto</p>
+                            </li>
+                            <li>
+                                <h3>Fagottini di Verza<span class="right">4,5</span></h3>    
+                                <p>con ripieno di patate</p>
+                            </li>
+                            <li>
+                                <h3>Nachos Supreme<span class="right">4,5</span></h3>    
+                                <p>tortilla con peperoncini e cheddar</p>
+                            </li>
+                            <li>
+                                <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>
+                                <p>brasati alla birra</p>
+                            </li>
+                            <li>
+                                <h3>Patate Fritte<span class="right">3,5</span></h3>    
+                                <p>patate fritte a bastoncini</p>
+                            </li>
+                            <li>
+                                <h3>Insalata Mista<span class="right">4</span></h3>
+                                <p>con verdure di stagione</p>
+                            </li>
+                            <li>
+                                <h3>Verze<span class="right">2,5</span></h3>
+                                <p>saltate in padella</p>
+                            </li>
+                            <li>
+                                <h3>Focacce<span class="right">2,5</span></h3>
+                                <p>focacce all'olio di oliva</p>
                             </li>
                         </ul>
                     </div>
@@ -301,20 +333,128 @@
             </div>
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">Secondi<br></h2>
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Agnello al Forno<span class="right">15</span></h3>
-                                <p>servito con patate arrosto</p>
+                                <h3>Beerstrot 360<span class="right">14,5</span></h3>    
+                                <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3>Grigliata Mista<span class="right">15</span></h3>
-                                <p>salsiccia artigianale, manzo, costine, agnello</p>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>    
+                                <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                             </li>
                             <li>
-                                <h3>Salsiccia Artigianale<span class="right">8,5</span></h3>
-                                <p>servita con krauti e patate arrosto</p>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,8</span></a></h3>    
+                                <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,8</span></a></h3> 
+                                <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
+                            </li>
+                            <li>
+                                <h3>Inverno<span class="right">8,8</span></h3> 
+                                <p>180 grammi di manzo, taleggio, pancetta, insalata</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
+                                <p>180 grammi di agnello, salsa allo yogurt, rucola</p>
+                            </li>
+                            <li>
+                                <h3>Pollo<span class="right">8,8</span></h3>    
+                                <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
+                                <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
+                            </li>
+                            <li>
+                                <h3>Mini Burger<span class="right">6</span></h3>    
+                                <p>100 grammi di manzo, cheddar</p>
+                            </li>
+                        </ul>                      
+                    </div>   
+                </div>
+            </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Zuppe <br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Vellutata di Castagne<span class="right">4,5</span></h3>    
+                                <p>zuppa di castagne con funghi e pancetta croccante</p>
+                            </li>
+                            <li>
+                                <h3>Orzetto alla Trentina<span class="right">4,5</span></h3>    
+                                <p>zuppa di orzo e speck</p>
+                            </li>
+                        </ul>                      
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Primi<br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Primo del Giorno<span class="right">6</span></h3>
+                                <p>lasagne bianche con ragù di carne o tagliatelle al ragù</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Carni <br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
+                                <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
+                            </li>
+                            <li>
+                                <h3>Chili<span class="right">7,5</span></h3>    
+                                <p>chili piccante con carne e fagioli servito in pagnotta</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">10,5</span></a></h3>    
+                                <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
+                            </li>
+                            <li>
+                                <h3>Stinco<span class="right">12</span></h3>    
+                                <p>stinco di maiale al forno servito con purè di patate</p>
+                            </li>
+                            <li>
+                                <h3>Tagliata<span class="right">16</span></h3>    
+                                <p>300 grammi di entrecôte di manzo servita su letto di rucola</p>
+                            </li>
+                            <li>
+                                <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
+                                <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
+                            </li>
+                        </ul>                      
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Blondie<span class="right">5</span></h3>
+                                <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5</span></a></h3>
+                                <p>tiramisù alla birra stout</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/cheesecake.html">Cheesecake<span class="right">5</span></a></h3>
+                                <p>cheesecake stile new york</p>
                             </li>
                         </ul>
                     </div>
