--- a/menu/index.html
+++ b/menu/index.html
@@ -279,7 +279,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Tutte le Domeniche. Dalle 12:00 alle 14:00. Tutto il menù Cena di Ca' Vecchia Beerstrot, più qualche succulenta novità.
+                        <h4>Tutte le Domeniche. Dalle 12:00 alle 14:00.
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
