--- a/eventi/index.html
+++ b/eventi/index.html
@@ -71,6 +71,23 @@
         <div class="medium-12 large-12 columns">
             <article class="row">  
                 <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">27 28 Marzo</h3>
+                    <h5>Orario: 12:00</h5>
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <a href="http://www.beerstrot.it/eventi/pasqua.html">
+                        <img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/pasqua-th.jpg" alt="Pranzo di Pasqua e Pasquetta">
+                    </a>
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Pranzo di Pasqua e Pasquetta</h2>
+                    <p>Menù di crespelle, hamburger, semifreddi, birre artigianali</p>
+                    <a href="http://www.beerstrot.it/eventi/pasqua.html">Scopri l'evento &rarr;</a>
+                </div>
+            </article>
+            <article class="row">  
+                <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Dicembre 2015</h3>
                     <h5>Orario: 21:15</h5>
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
