--- a/eventi/pasqua.html
+++ b/eventi/pasqua.html
@@ -97,7 +97,7 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Festeggia la Pasqua e il lunedì di Pasqua a Ca' Vecchia Beerstrot</h2>
+                <h2>Festeggia la Pasqua e la Pasquetta a Ca' Vecchia Beerstrot</h2>
                 <p>Per il pranzo del 27 e 28 Marzo abbiamo preparato un <strong>menù speciale</strong> a 30€ acqua, vino della casa e birra artigianale inclusi.</p>
                 <p>Prenotazone richiesta. Affrettati: abbiamo solo 60 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
