--- a/eventi/index.html
+++ b/eventi/index.html
@@ -86,6 +86,11 @@
                     <a href="http://www.beerstrot.it/eventi/pasqua.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
+            <div class="row">
+                <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    <hr>
+                </div>
+            </div>
             <article class="row">  
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Dicembre 2015</h3>
