--- a/eventi/pasqua.html
+++ b/eventi/pasqua.html
@@ -99,7 +99,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Festeggia la Pasqua e la Pasquetta a Ca' Vecchia Beerstrot</h2>
                 <p>Per il pranzo del 27 e 28 Marzo abbiamo preparato un <strong>menù speciale</strong> a 30€ acqua, vino della casa e birra artigianale inclusi.</p>
-                <p>Prenotazone richiesta. Affrettati: abbiamo solo 60 posti disponibili.</p>
+                <p>Prenotazone richiesta entro il 23 Marzo. Affrettati: abbiamo solo 30 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
@@ -114,7 +114,6 @@
                     <li>Crespelle agli asparigi e ricotta </li>
                 </ul>
                 <h3 class="subheader">Secondo</h3>
-                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
                     <li>Hamburger da 180 grammi a scelta tra  agnello , pollo,  manzo con composta di feta e pomodorini, latticello, valeriana</li>
                 </ul>
