--- a/eventi/pasqua.html
+++ b/eventi/pasqua.html
@@ -88,7 +88,7 @@
                     <div class="row">
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
-                                <h5 class="date" style="margin-top: 0.5em;">27 e 28 Marzo 2016</h5>
+                                <h5 class="date" style="margin-top: 0.5em;">27 <small>e</small> 28 Marzo 2016</h5>
                                 <h5>Dalle 12:00</h5>
                                 <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
@@ -99,7 +99,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Festeggia la Pasqua e la Pasquetta a Ca' Vecchia Beerstrot</h2>
                 <p>Per il pranzo del 27 e 28 Marzo abbiamo preparato un <strong>menù speciale</strong> a 30€ acqua, vino della casa e birra artigianale inclusi.</p>
-                <p>Prenotazone richiesta entro il 23 Marzo. Affrettati: abbiamo solo 30 posti disponibili.</p>
+                <p>Prenotazone richiesta entro il 23 Marzo.<br>Affrettati: abbiamo solo 30 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
@@ -115,7 +115,7 @@
                 </ul>
                 <h3 class="subheader">Secondo</h3>
                 <ul>
-                    <li>Hamburger da 180 grammi a scelta tra  agnello , pollo,  manzo con composta di feta e pomodorini, latticello, valeriana</li>
+                    <li>Hamburger da 180 grammi a scelta tra  agnello, pollo,  manzo con composta di feta e pomodorini, latticello, valeriana</li>
                 </ul>
                 <h3 class="subheader">Dolce</h3>
                 <ul>
