--- a/eventi/index.html
+++ b/eventi/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Pranzo di Pasqua e Pasquetta</h2>
-                    <p>Menù di crespelle, hamburger, semifreddi, birre artigianali</p>
+                    <p>Menù di crespelle, hamburger, semifreddi, birre artigianali.</p>
                     <a href="http://www.beerstrot.it/eventi/pasqua.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
