--- a/eventi/pasqua.html
+++ b/eventi/pasqua.html
@@ -98,7 +98,7 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Festeggia la Pasqua e la Pasquetta a Ca' Vecchia Beerstrot</h2>
-                <p>Per il pranzo del 27 e 28 Marzo abbiamo preparato un <strong>menù speciale</strong> a 30€ acqua, vino della casa e birra artigianale inclusi.</p>
+                <p>Per il pranzo del 27 e 28 Marzo abbiamo preparato un <strong>menù speciale</strong> a 30€ inclusi acqua, vino della casa e birra artigianale.</p>
                 <p>Prenotazone richiesta entro il 23 Marzo.<br>Affrettati: abbiamo solo 30 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
@@ -115,7 +115,7 @@
                 </ul>
                 <h3 class="subheader">Secondo</h3>
                 <ul>
-                    <li>Hamburger da 180 grammi a scelta tra  agnello, pollo,  manzo con composta di feta e pomodorini, latticello, valeriana</li>
+                    <li>Hamburger da 180 grammi (scelta tra  agnello, pollo, manzo) con composta di feta e pomodorini, latticello, valeriana</li>
                 </ul>
                 <h3 class="subheader">Dolce</h3>
                 <ul>
