--- a/eventi/pasqua.html
+++ b/eventi/pasqua.html
@@ -130,6 +130,9 @@
                     <li>Dolce</li>
                     <li>Bibita</li>
                 </ul>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
+                <hr>
             </div>
         </article>
     </div>
